--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "jquery": "^3.6.0",
     "nunjucks": "^3.2.3",
     "sass": "^1.52.3",
-    "typescript": "^4.7.3"
+    "typescript": "^4.7.3",
+    "winston": "^3.7.2"
   },
   "devDependencies": {
     "@types/cookie-parser": "^1.4.3",
