--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "dotenv": "^16.0.1",
     "esbuild": "^0.14.43",
     "express": "^4.18.1",
+    "express-flash": "0.0.2",
     "express-session": "^1.17.3",
     "express-validator": "^6.14.1",
     "govuk-frontend": "^4.1.0",
@@ -45,6 +46,7 @@
     "@types/cookie-parser": "^1.4.3",
     "@types/csurf": "^1.11.2",
     "@types/express": "^4.17.13",
+    "@types/express-flash": "0.0.2",
     "@types/express-session": "^1.17.4",
     "@types/node": "^17.0.42",
     "@types/nunjucks": "^3.2.1",
